--- a/.env
+++ b/.env
@@ -1,30 +1,5 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-.env
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-
-.env
-.env.local
+DEV = true
+VITE_API_NODE_ENV='development'
+VITE_API_BASE_URL='https://backend.taxiloguk.co.uk/api'
 
 
