--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@material-tailwind/html": "^3.0.0-beta.7",
+    "@reduxjs/toolkit": "^2.9.0",
     "@stripe/stripe-js": "^8.0.0",
+    "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5"
   },
@@ -34,7 +37,7 @@
     "globals": "^16.4.0",
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.1.7"
   }
 }
