--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DEV = true
 VITE_API_NODE_ENV='development'
-VITE_API_BASE_URL='https://backend.taxiloguk.co.uk/api'
+# VITE_API_BASE_URL='https://backend.taxiloguk.co.uk/api'
+VITE_API_BASE_URL='http://localhost:3000'
 
 
