--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-DEV = true
-VITE_API_NODE_ENV='development'
-# VITE_API_BASE_URL='https://staurt5backend.mtscorporate.com'
-VITE_API_BASE_URL='http://localhost:3000'
+# API Configuration
+VITE_API_BASE_URL=/api
+VITE_BACKEND_URL=https://staurt5backend.mtscorporate.com
 
+# Development Configuration  
+VITE_NODE_ENV=development
+
+# Application Configuration
+VITE_APP_NAME=Stuart Frontend
+VITE_APP_VERSION=1.0.0
 
 
