--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@material-tailwind/html": "^3.0.0-beta.7",
     "@reduxjs/toolkit": "^2.9.0",
-    "@stripe/stripe-js": "^8.0.0",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "js-cookie": "^3.0.5",
@@ -23,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
