--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@stripe/stripe-js": "^8.1.0",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
+    "html-to-image": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
