--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "globals": "^16.4.0",
     "json-server": "^1.0.0-beta.3",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.18",
     "vite": "^7.1.7"
   }
